added hero image

--- a/index.html
+++ b/index.html
@@ -256,9 +256,28 @@
         <!-- Start Main Slider -->
 
 
-        <div class="flex-container">
+<div class="flex-container">
             <div class="flex-slide home">
                 <div class="flex-title">
+                    <div class="button now-in-view my-4">
+                        <a class="btn-one style2 rec" href="https://www.travolex.com">
+                            <span class="border-box"></span>
+                            <span class="bg bg--gradient"></span>
+                            <span class="txt">Travel</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-slide about">
+                <div class="flex-title">
+                    <div class="button now-in-view my-4">
+                        <a class="btn-one style2 tra" href="corporate-travel">
+                            <span class="border-box"></span>
+                            <span class="bg bg--gradient"></span>
+                            <span class="txt">Corporate Travel</span>
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </div>
