changed content of all servic pages

--- a/corporate-travel/index.html
+++ b/corporate-travel/index.html
@@ -2,26 +2,25 @@
 <html lang="en">
 <head>
     <!-- Required meta tags -->
-    <title> Best Recruitment Agency In Pune,India | Job Placement Company In Pune | Job Consultancy Services Pune |
-        Valiant Business Solution</title>
+    <title> Corporate Travel Management Company in Pune | Valiant Business Solution</title>
     <meta name="description"
-        content="Valiant Business Solutions (VBS) is a leading recruitment company In Pune, India that is dedicated to helping businesses grow by finding the right talent to meet their specific needs. Contact us now to find the perfect candidate for your company.">
+        content="VBS offers comprehensive corporate travel management in Pune—covering flights, hotels, MICE, visa, and forex services for your business needs.">
     <meta name="keywords"
-        content="Best_Recruitment_Agency_In_India , Job_Placement_Company_In _Pune , Job_Consultancy_Services_Pune , HR_Consulatant ,  Valiant_Business_Solution">
+        content="Corporate_Travel_Management_Company_In_Pune , Business_Travel_Services , Valiant_Business_Solution">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- For IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property='og:site_name' content='VBS'/>
-    <meta property='og:url' content='https://www.valiantbusinesssolutions.com/vbsjob'/>
+    <meta property='og:url' content='https://www.valiantbusinesssolutions.com/corporate-travel'/>
     <meta property='og:locale' content='en_US' />
-    <meta property='og:title' content=' Top Recruitment Company In India - Valiant Business Solution (VBS) ' />
+    <meta property='og:title' content=' Corporate Travel Management Service in pune – Valiant Business Solution (VBS) ' />
     <meta property='og:description'
-        content='  Valiant Business Solutions (VBS) is a leading recruitment company In India that is dedicated to helping businesses grow by finding the right talent to meet their specific needs. Contact us now to find the perfect candidate for your company.  ' />
+        content=' VBS is your one-stop partner in Pune for corporate travel, meetings, incentives, conferences, and exhibitions—managed professionally from start to finish.  ' />
     <meta property='og:type' content='website' />
     <meta property='og:image' content='https://www.valiantbusinesssolutions.com/assets/img/common/c2blue.png' />
 
-    <link rel="canonical" href="https://www.valiantbusinesssolutions.com/vbsjob">
+    <link rel="canonical" href="https://www.valiantbusinesssolutions.com/corporate-travel">
     <!-- Favicon  -->
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/images/logo/Favicon.png">
     <!-- Bootstrap CSS -->
@@ -329,7 +328,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-              <a href="flight-booking">
+              <a href="travel-insurance">
                 <div class="category-card">
 <img
                     src="../assets/images/corporate/medical-insurance.png"
