hero section glitch resolved

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,11 @@
 
   gtag('config', 'G-T86CD36EWT');
 </script>
-
+<style>
+    .wa{
+              margin-left: 0;
+            }
+</style>
 </head>
 <body>
 
