--- a/index.html
+++ b/index.html
@@ -283,9 +283,21 @@
         </div>
         <!-- End Main Slider -->
         <!-- mobile slider -->
-        <section class="mobileslider"
-            style="margin-top: 115px;background-image: url('assets/images/vbs-banner.jpg');">
+         <section class="mobileslider "
+            style="    margin-top: 115px;background-image: url('assets/images/d49a911d87.jpg');">
+            <a class="btn-one style2 recm" href="https://www.travolex.com">
+                <span class="border-box"></span>
+                <span class="bg bg--gradient"></span>
+                <span class="txt">Travel</span>
+            </a>
         </section>
+        <section class="mobileslider " style="background-image: url('assets/images/17f202371d.jpg');">
+            <a class="btn-one style2 tram" href="corporate-travel/index.html">
+                <span class="border-box"></span>
+                <span class="bg bg--gradient"></span>
+                <span class="txt">Corporate Travel</span>
+            </a>
+                    </section>
         <!-- End mobile slider  -->
 
         <!--Start Choose Choose Style4 Area-->
