--- a/corporate-travel/index.html
+++ b/corporate-travel/index.html
@@ -106,6 +106,9 @@
             .accordion-titlem{
                 font-size:20px!important;
             }
+            .wa{
+              margin-left: 0;
+            }
           </style>
         </div>
       </section>
