minor linking fixation

--- a/corporate-travel/flight-booking.html
+++ b/corporate-travel/flight-booking.html
@@ -172,7 +172,7 @@
 
         <div class="row">
           <div class="col-md-4 col-sm-6">
-            <a href="financial-services">
+            <!-- <a href="financial-services"> -->
               <div class="category-card">
                 <i class="flaticon"><img src="../assets/images/icon/taj-mahal.png" class="reaestate" /></i>
                 <h3>Domestic Flights in India</h3>
@@ -181,11 +181,11 @@
                   Looking for trusted domestic flight booking services in Pune? VBS offers fast, reliable assistance for booking flights across India. Get expert guidance, error-free documentation, and quick approvals. Travel hassle-free with Pune’s most trusted flight booking agency.
                 </p>
               </div>
-            </a>
+            <!-- </a> -->
           </div>
 
           <div class="col-md-4 col-sm-6">
-            <a href="education">
+            <!-- <a href="education"> -->
               <div class="category-card">
                 <i class="flaticon"><img src="../assets/images/icon/tour.png" class="reaestate" /></i>
                 <h3>International Flight Booking</h3>
@@ -194,11 +194,11 @@
                   Need international flight booking services in Pune? VBS provides expert assistance for corporate and professional travelers flying to destinations like the USA, UK, Canada, Schengen, and more. Our consultants ensure accurate documentation, faster approvals, and end-to-end support.
                 </p>
               </div>
-            </a>
+            <!-- </a> -->
           </div>
 
           <div class="col-md-4 col-sm-6">
-            <a href="it">
+            <!-- <a href="it"> -->
               <div class="category-card">
                 <i class="flaticon"><img src="../assets/images/icon/tour.png" class="reaestate" /></i>
                 <br />
@@ -207,7 +207,7 @@
                 <p>
                 Book reliable corporate flight booking agency in Pune? VBS offers quick and hassle-free assistance for corporate travel arrangements. Our experts handle everything from itinerary planning to ticketing, ensuring a smooth travel experience for your team.
               </div>
-            </a>
+            <!-- </a> -->
           </div>
     </section>
 
