--- a/corporate-travel/mice.html
+++ b/corporate-travel/mice.html
@@ -76,7 +76,7 @@
     }
 
     .category-card {
-      height: 150px !important;
+      height: 500px !important;
     }
   </style>
   <script>
@@ -407,7 +407,12 @@
               <div class="category-card">
                 <i class="flaticon-accounting"></i>
                 <h3>Finance</h3>
-                <br />
+                  <br />
+                <p>
+                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
+                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
+                  application filing, and interview preparation for smooth approvals.
+                </p>
               </div>
             </a>
           </div>
@@ -417,7 +422,12 @@
               <div class="category-card">
                 <i class="flaticon-graduation-cap"></i>
                 <h3>Education</h3>
-                <br />
+                  <br />
+                <p>
+                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
+                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
+                  application filing, and interview preparation for smooth approvals.
+                </p>
               </div>
             </a>
           </div>
@@ -428,7 +438,12 @@
                 <i class="flaticon-computer"></i>
                 <br />
                 <h3>IT</h3>
-                <br />
+                  <br />
+                <p>
+                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
+                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
+                  application filing, and interview preparation for smooth approvals.
+                </p>
               </div>
             </a>
           </div>
@@ -438,7 +453,12 @@
               <div class="category-card">
                 <i class="flaticon"><img src="assets/img/logo/agreement.png" class="reaestate" /></i>
                 <h3>Consulting</h3>
-                <br />
+                  <br />
+                <p>
+                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
+                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
+                  application filing, and interview preparation for smooth approvals.
+                </p>
               </div>
             </a>
           </div>
@@ -461,6 +481,12 @@
               <div class="category-card">
                 <img src="assets/img/reviews/resort.png" class="wid-5r" /><br /><br />
                 <h3>Healthcare</h3>
+                  <br />
+                <p>
+                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
+                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
+                  application filing, and interview preparation for smooth approvals.
+                </p>
               </div>
             </a>
           </div>
@@ -482,6 +508,12 @@
               <div class="category-card">
                 <img src="assets/img/reviews/manufacturing.png" class="wid-5r" /><br /><br />
                 <h3>Manufacturing</h3>
+                  <br />
+                <p>
+                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
+                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
+                  application filing, and interview preparation for smooth approvals.
+                </p>
               </div>
             </a>
           </div>
