--- a/corporate-travel/visa-assistance.html
+++ b/corporate-travel/visa-assistance.html
@@ -193,7 +193,7 @@
 
         <div class="row">
           <div class="col-md-4 col-sm-6">
-            <a href="financial-services">
+            <!-- <a href="financial-services"> -->
               <div class="category-card">
                 <i class="flaticon-accounting"></i>
                 <h3>Tourist Visa Agents Pune</h3>
@@ -204,11 +204,11 @@
                   documentation, and quick approvals. Travel hassle-free with Pune’s most trusted visa consultants
                 </p>
               </div>
-            </a>
+            <!-- </a> -->
           </div>
 
           <div class="col-md-4 col-sm-6">
-            <a href="education">
+            <!-- <a href="education"> -->
               <div class="category-card">
                 <i class="flaticon-graduation-cap"></i>
                 <h3>Business Visa services in Pune</h3>
@@ -219,11 +219,11 @@
                   accurate documentation, faster approvals, and end-to-end support.
                 </p>
               </div>
-            </a>
+            <!-- </a> -->
           </div>
 
           <div class="col-md-4 col-sm-6">
-            <a href="it">
+            <!-- <a href="it"> -->
               <div class="category-card">
                 <i class="flaticon-computer"></i>
                 <br />
@@ -234,11 +234,11 @@
                   assistance for international travelers. Our experts handle documentation, embassy appointments, and
                   fast approvals for Schengen, UK, USA, and other countries.
               </div>
-            </a>
+            <!-- </a> -->
           </div>
 
           <div class="col-md-4 col-sm-6">
-            <a href="consulting">
+            <!-- <a href="consulting"> -->
               <div class="category-card">
                 <i class="flaticon"><img src="assets/img/logo/agreement.png" class="reaestate" /></i>
                 <h3>Student Visa Consultant Pune</h3>
@@ -249,7 +249,7 @@
                   prep, our consultants ensure a smooth process and high approval success.
                 </p>
               </div>
-            </a>
+            <!-- </a> -->
           </div>
 
           <!-- <div class="col-md-4 col-sm-6">
@@ -266,7 +266,7 @@
             </div> -->
 
           <div class="col-md-4 col-sm-6">
-            <a href="hospitality">
+            <!-- <a href="hospitality"> -->
               <div class="category-card">
                 <img src="assets/img/reviews/resort.png" class="wid-5r" /><br /><br />
                 <h3>Visiting Visa Services in Pune</h3>
@@ -277,7 +277,7 @@
                   application filing, and interview preparation for smooth approvals.
                 </p>
               </div>
-            </a>
+            <!-- </a> -->
           </div>
 
           <!-- <div class="col-md-4 col-sm-6 offset-md-2 offset-lg-0">
@@ -293,7 +293,7 @@
             </div> -->
 
           <div class="col-md-4 col-sm-6">
-            <a href="manufacturing">
+            <!-- <a href="manufacturing"> -->
               <div class="category-card">
                 <img src="assets/img/reviews/manufacturing.png" class="wid-5r" /><br /><br />
                 <h3>Work Visa Consultant Pune</h3>
@@ -304,7 +304,7 @@
                   approvals.
                 </p>
               </div>
-            </a>
+            <!-- </a> -->
           </div>
     </section>
 
