--- a/corporate-travel/index.html
+++ b/corporate-travel/index.html
@@ -66,6 +66,25 @@
 
       gtag("config", "G-T86CD36EWT");
     </script>
+    
+          <style>
+            .page-title ul {
+              margin: 0;
+              display: inline-block;
+              padding: 10px;
+              border: 1px solid rgba(132, 137, 152, 0.5);
+              border-radius: 30px;
+            }
+            .accordion-titlem{
+                font-size:20px!important;
+            }
+            .wa{
+              margin-left: 0;
+            }
+            .breadcrumb-area-bg {
+    box-shadow: none!important;
+}
+          </style>
   </head>
 
   <body class="parallax-visible">
@@ -88,28 +107,13 @@
                   data-aos-easing="linear"
                   data-aos-duration="1500"
                 >
-                  <h1 class="text-white">
+                  <h1 class="text-white" style="font-family: 'Montserrat';">
                   Corporate Travel Management Solutions in Pune
                   </h1>
                 </div>
               </div>
             </div>
           </div>
-          <style>
-            .page-title ul {
-              margin: 0;
-              display: inline-block;
-              padding: 10px;
-              border: 1px solid rgba(132, 137, 152, 0.5);
-              border-radius: 30px;
-            }
-            .accordion-titlem{
-                font-size:20px!important;
-            }
-            .wa{
-              margin-left: 0;
-            }
-          </style>
         </div>
       </section>
       <!--End breadcrumb area-->
