--- a/services.html
+++ b/services.html
@@ -112,14 +112,14 @@
 
         <section class="service-style8-area pdtop120">
             <div class="container">
-                <div class="sec-title-style5 text-center">
+                <!-- <div class="sec-title-style5 text-center">
                     <div class="icon">
                         <span class="icon-picasa-logo"></span>
                     </div>
 
-                    <h3>Corporate Travel</h3>
+                    <h3>Our Services for Corporate Travel</h3>
 
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="col-xl-3">
                         <div class="service-style8__content-left">
@@ -130,7 +130,7 @@
                                         <h3>01</h3>
                                     </div>
                                     <div class="text-box pt-3">
-                                        <h3><a href="https://www.travolex.com/air-ticketing">
+                                        <h3><a href="corporate-travel/flight-booking.html">
                                                 <span>Flight Booking</span></a></h3>
 
                                     </div>
@@ -142,7 +142,7 @@
                                         <h3>02</h3>
                                     </div>
                                     <div class="text-box pt-3">
-                                        <h3><a href="https://www.travolex.com/top-hotel-booking-agency-in-pune-india"><span>Hotel Booking</span></a></h3>
+                                        <h3><a href="corporate-travel/hotel-booking.html"><span>Hotel Booking</span></a></h3>
 
                                     </div>
                                 </li>
@@ -153,7 +153,7 @@
                                         <h3>03</h3>
                                     </div>
                                     <div class="text-box pt-3">
-                                        <h3><a href="https://www.travolex.com/top-visa-consultancy-services-in-pune-india"> <span>Visa Assistance
+                                        <h3><a href="corporate-travel/visa-assistance.html"> <span>Visa Assistance
                                                 </span></a></h3>
 
                                     </div>
@@ -178,7 +178,7 @@
                                         <h3>04</h3>
                                     </div>
                                     <div class="text-box pt-3">
-                                        <h3><a href="https://www.travolex.com/best-travel-insurance-agency-in-pune-india"><span>Travel Insurance</span></a></h3>
+                                        <h3><a href="corporate-travel/travel-insurance.html"><span>Travel Insurance</span></a></h3>
 
                                     </div>
                                 </li>
@@ -189,7 +189,7 @@
                                         <h3>05</h3>
                                     </div>
                                     <div class="text-box pt-3">
-                                        <h3><a href="https://www.travolex.com/best-international-and-domestic-holiday-packages-in-pune-india"><span>Holiday Packages</span></a></h3>
+                                        <h3><a href="corporate-travel/forex.html"><span>Forex</span></a></h3>
 
                                     </div>
                                 </li>
@@ -200,7 +200,7 @@
                                         <h3>06</h3>
                                     </div>
                                     <div class="text-box pt-3">
-                                        <h3><a href="https://www.travolex.com/customized-mice-services"> <span>MICE</span></a></h3>
+                                        <h3><a href="corporate-travel/mice.html"> <span>MICE</span></a></h3>
                                         <!--<p>Etiam scelerisque fringilla magna vel fringilla. Maecen aliquet massa-->
                                         <!--    facilisis.</p>-->
                                     </div>
