modification on service pages

--- a/corporate-travel/mice.html
+++ b/corporate-travel/mice.html
@@ -76,7 +76,7 @@
     }
 
     .category-card {
-      height: 500px !important;
+      height: 780px;
     }
   </style>
   <script>
@@ -96,7 +96,7 @@
     <header-element></header-element>
     <section class="breadcrumb-area">
       <div class="breadcrumb-area-bg" style="
-            background-image: url(../../assets/images/corporate/banner.png);
+            background-image: url(../../assets/images/corporate/MICE-VBS-banner.png);
           "></div>
       <div class="container">
         <div class="row">
@@ -121,7 +121,7 @@
           <!-- Left: Image Section -->
           <div class="img-holder">
             <div class="inner d-flex">
-              <img src="assets/img/blog/importance-of-work-life-balance-for-employees-and-organizations2.png"
+              <img src="../assets/images/services/MIC-VBS.png"
                 alt="The Importance Of Work-Life Balance" title="Importance Of Work-Life Balance"
                 style="margin: auto;" />
             </div>
@@ -409,9 +409,7 @@
                 <h3>Finance</h3>
                   <br />
                 <p>
-                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
-                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
-                  application filing, and interview preparation for smooth approvals.
+                 VBS specializes in organizing high-impact finance industry events in Pune, including corporate conferences, investor meets, and financial summits. Our expert team delivers seamless event planning, premium venues, and innovative setups designed to engage top executives and investors. Whether it’s a leadership retreat or product launch, VBS ensures professional execution with ROI-driven strategies. Choose VBS for corporate events in Pune that inspire growth, trust, and lasting partnerships.
                 </p>
               </div>
             </a>
@@ -424,9 +422,7 @@
                 <h3>Education</h3>
                   <br />
                 <p>
-                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
-                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
-                  application filing, and interview preparation for smooth approvals.
+                  VBS offers end-to-end event management for the education sector in Pune, delivering impactful academic conferences, seminars, workshops, and training programs. We specialize in organizing educational summits that foster collaboration, innovation, and knowledge exchange. With expert planning, premium venues, and flawless logistics, VBS ensures every event drives engagement and excellence. Choose VBS for professional academic event management in Pune and elevate your institution’s brand through world-class experiences.
                 </p>
               </div>
             </a>
@@ -440,9 +436,7 @@
                 <h3>IT</h3>
                   <br />
                 <p>
-                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
-                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
-                  application filing, and interview preparation for smooth approvals.
+                  VBS specializes in managing world-class IT events in Pune, including tech conferences, corporate meetings, product launches, and innovation summits. We help IT companies connect, collaborate, and grow through impactful event experiences. Our expert event planners in Pune deliver end-to-end solutions — from venue selection and branding to technology integration and seamless execution. Whether it’s a global tech summit or internal corporate event, VBS ensures professionalism, engagement, and measurable results. Choose VBS for high-impact IT event management in Pune.
                 </p>
               </div>
             </a>
@@ -455,9 +449,7 @@
                 <h3>Consulting</h3>
                   <br />
                 <p>
-                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
-                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
-                  application filing, and interview preparation for smooth approvals.
+                 VBS delivers exceptional event management solutions for consulting firms in Pune, specializing in leadership summits, client conferences, training sessions, and networking events. We create professional environments that inspire collaboration and strategic growth. Our experienced event planners in Pune ensure flawless execution, premium venues, and engaging formats tailored to consulting professionals. From high-level business meetings to corporate celebrations, VBS guarantees impactful, results-driven experiences. Choose VBS for consulting events in Pune that elevate your brand and strengthen client relationships.
                 </p>
               </div>
             </a>
@@ -483,9 +475,7 @@
                 <h3>Healthcare</h3>
                   <br />
                 <p>
-                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
-                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
-                  application filing, and interview preparation for smooth approvals.
+                  VBS specializes in organizing professional healthcare events in Pune, including medical conferences, pharmaceutical launches, hospital seminars, and CME programs. Our expert event planners in Pune deliver precise, compliant, and engaging experiences that connect healthcare professionals, researchers, and industry leaders. From concept to execution, VBS ensures seamless logistics, premium venues, and impactful engagement. Whether it’s a medical symposium or product launch, trust VBS for healthcare event management in Pune that promotes innovation, collaboration, and brand excellence.
                 </p>
               </div>
             </a>
@@ -510,9 +500,7 @@
                 <h3>Manufacturing</h3>
                   <br />
                 <p>
-                  Looking for visiting visa services in Pune? VBS provides fast and reliable visiting visa assistance
-                  for countries like USA, UK, Canada, Schengen, and Australia. Our experts handle documentation,
-                  application filing, and interview preparation for smooth approvals.
+                  VBS offers end-to-end event management solutions for the manufacturing sector in Pune, specializing in industrial conferences, product launches, trade shows, and dealer meets. Our expert planners create dynamic platforms that showcase innovation, technology, and brand excellence. From venue selection to on-site execution, VBS ensures precision, creativity, and ROI-driven results. Whether it’s a factory inauguration or global manufacturing summit, VBS delivers impactful events that connect industry leaders and drive business growth. Choose VBS for trusted manufacturing event management in Pune.
                 </p>
               </div>
             </a>
