--- a/corporate-travel/train-ticketing.html
+++ b/corporate-travel/train-ticketing.html
@@ -79,6 +79,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.css"
     />
+  
     <!-- Dark CSS -->
 
     <!-- Responsive CSS -->
@@ -132,7 +133,7 @@ height: 150px!important;
         <div
           class="breadcrumb-area-bg"
           style="
-            background-image: url(../../assets/images/corporate/banner.png);
+            background-image: url(../../assets/images/corporate/VBS-train-ticket-booking-banner.png)
           "
         ></div>
         <div class="container">
