--- a/corporate-travel/travel-insurance.html
+++ b/corporate-travel/travel-insurance.html
@@ -15,7 +15,7 @@
   <!-- For IE -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta property="og:site_name" content="VBS" />
-  <meta property="og:url" content="https://www.valiantbusinesssolutions.com/corporate-travel/travel-insurance-pune" />
+  <meta property="og:url" content="https://www.valiantbusinesssolutions.com/corporate-travel/travel-insurance" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:title" content=" Best Travel Insurance Plans in Pune - Valiant Business Solution (VBS) " />
   <meta property="og:description"
@@ -23,7 +23,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://www.valiantbusinesssolutions.com/assets/img/common/c2blue.png" />
 
-  <link rel="canonical" href="https://www.valiantbusinesssolutions.com/vbsjob" />
+  <link rel="canonical" href="https://www.valiantbusinesssolutions.com/corporate-travel/travel-insurance" />
   <!-- Favicon  -->
   <link rel="shortcut icon" type="image/x-icon" href="../../assets/images/logo/Favicon.png" />
   <!-- Bootstrap CSS -->
