--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                                     </div>
                                     <form id="contact-form" class="default-form2" action="contact.php" method="post">
                                         <div class="row">
-                                            <div class="col-xl-6 pb-5">
+                                            <div class="col-xl-12 pb-5">
                                                 <div class="input-box">
                                                     <input type="text" name="form_name" id="formName" placeholder="Full Name*" required>
                                                 </div>
@@ -146,13 +146,13 @@
                                                 </div>
                                             </div>
                                 
-                                            <div class="col-xl-6 pb-5">
+                                            <!-- <div class="col-xl-6 pb-5">
                                                 <select name="form_subject" id="formSubject">
                                                     <option value="">Select Subject</option>
                                                     <option value="Staffing Solutions">Staffing Solutions</option>
                                                     <option value="Travel Assistance">Travel Assistance</option>
                                                 </select>
-                                            </div>
+                                            </div> -->
                                 
                                             <div class="col-xl-12 pb-5">
                                                 <div class="input-box">
