--- a/corporate-travel/index.html
+++ b/corporate-travel/index.html
@@ -49,7 +49,7 @@
     <!-- Dark CSS -->
 
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <!-- Favicon -->
     <!-- Google tag (gtag.js) -->
@@ -83,6 +83,12 @@
             }
             .breadcrumb-area-bg {
     box-shadow: none!important;
+}
+
+@media only screen and (max-width: 480px) {
+  .accordion-titlem{
+                font-size:14px!important;
+            }
 }
           </style>
   </head>
@@ -495,69 +501,91 @@
 
 <div class="fcontainer">
   <div class="containerm">
-    <h2>Frequently Asked Questions</h2>
     <div class="accordionm mt">
-
+  <div class="sec-title text-center">
+        <div class="sec-title text-center bottam-bor">
+          <h2 class="mb-3 pb-3">
+            <span style="color:#000;">Frequently Asked Questions</span>
+          </h2>
+        </div>
+      </div>
       <!-- FAQ 1 -->
-      <div class="accordion-itemm">
+      <div class="accordion-itemm card-header">
         <button id="accordion-button-1" aria-expanded="false">
-          <h2 class="accordion-titlem">1. What is Corporate Travel Management?</h2>
+          <span class="accordion-titlem">1. What is Corporate Travel Management?</span>
+          <h2 class="visually-hidden">1. What is Corporate Travel Management?</h2>
           <span class="icon" aria-hidden="true"></span>
         </button>
+
         <div class="accordion-content">
           <p class="faqw">
             It’s the process of planning and managing business trips including flights, hotels, and expenses.
             VBS, a leading corporate travel management company in Pune,
             ensures smooth, cost-effective travel for your team.
-          </p> <h3 class="visually-hidden">VBS, a leading corporate travel management company in Pune,</h3>
+          </p>
+          <h3 class="visually-hidden">
+            VBS, a leading corporate travel management company in Pune,
+          </h3>
         </div>
       </div>
 
       <!-- FAQ 2 -->
-      <div class="accordion-itemm">
+      <div class="accordion-itemm card-header">
         <button id="accordion-button-2" aria-expanded="false">
-          <h2 class="accordion-titlem">2. Why choose VBS for corporate travel?</h2>
+          <span class="accordion-titlem">2. Why choose VBS for corporate travel?</span>
+          <h2 class="visually-hidden">2. Why choose VBS for corporate travel?</h2>
           <span class="icon" aria-hidden="true"></span>
         </button>
+
         <div class="accordion-content">
           <p class="faqw">
-           Valiant Business Solutions offers personalized business travel solutions,
+            Valiant Business Solutions offers personalized business travel solutions,
             24/7 support, and global partnerships that make every corporate trip efficient, secure, and budget-friendly.
-          </p>  <h3 class="visually-hidden">Valiant Business Solutions offers personalized business travel solutions,</h3>
+          </p>
+          <h3 class="visually-hidden">
+            Valiant Business Solutions offers personalized business travel solutions,
+          </h3>
         </div>
       </div>
 
       <!-- FAQ 3 -->
-      <div class="accordion-itemm">
+      <div class="accordion-itemm card-header">
         <button id="accordion-button-3" aria-expanded="false">
-          <h2 class="accordion-titlem">3. Do you provide MICE travel services?</h2>
+          <span class="accordion-titlem">3. Do you provide MICE travel services?</span>
+          <h2 class="visually-hidden">3. Do you provide MICE travel services?</h2>
           <span class="icon" aria-hidden="true"></span>
         </button>
+
         <div class="accordion-content">
           <p class="faqw">
             Yes, VBS specializes in MICE travel 
             handling meetings, incentives, conferences, and exhibitions with complete planning, logistics, and on-site coordination.
-          </p><h3 class="visually-hidden">VBS specializes in MICE travel</h3>
+          </p>
+          <h3 class="visually-hidden">VBS specializes in MICE travel</h3>
         </div>
       </div>
 
       <!-- FAQ 4 -->
-      <div class="accordion-itemm">
+      <div class="accordion-itemm card-header">
         <button id="accordion-button-4" aria-expanded="false">
-          <h2 class="accordion-titlem">4. Do you manage international travel too?</h2>
+          <span class="accordion-titlem">4. Do you manage international travel too?</span>
+          <h2 class="visually-hidden">4. Do you manage international travel too?</h2>
           <span class="icon" aria-hidden="true"></span>
         </button>
+
         <div class="accordion-content">
           <p class="faqw">
             Absolutely! We manage domestic and international corporate travel,
             offering end-to-end support, competitive fares, and policy-compliant solutions for your business needs.
-          </p><h3 class="visually-hidden">domestic and international corporate travel,</h3>
+          </p>
+          <h3 class="visually-hidden">domestic and international corporate travel,</h3>
         </div>
       </div>
 
     </div>
   </div>
 </div>
+
 
 
 
