--- a/corporate-travel/contact.html
+++ b/corporate-travel/contact.html
@@ -152,7 +152,7 @@
         <div class="container">
             <div class="contact-area">
                 <h3 class="pb-4">Talk To Us</h3>
-                <form id="job-contact-form" action="job_contact.php" method="post">
+                <form id="job-contact-form" action="../contact.php" method="post">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
